// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders input 1`] = `
<div>
  <label
    class="flex items-center"
  >
    <input
      class="border outline-0 px-2 py-1.5 rounded cursor-pointer"
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Input renders input 2`] = `
<div>
  <label
    class="flex items-center"
  >
    <input
      class="border outline-0 px-2 py-1.5 rounded cursor-pointer"
      type="checkbox"
    />
    <span
      class="px-1.5"
    >
      Label
    </span>
  </label>
</div>
`;
